Fixed carousel margins on mobile

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -176,6 +176,9 @@ body {
 	    min-height: 100%;
 	    max-height: 200px;
 	}
+	.carousel-caption {
+		font-size: 80%;
+	}
 }
 
 
